# nexi-search

./: .editorconfig  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
agent_chat/: Anubis_Findings_2026_02_23.md  plan_cli_output_restoration_2026-05-02.md  plan_direct_provider_override_2026-04-24.md  plan_fetch_resilience_2026-04-24.md  plan_multi_key_provider_reliability_2026-05-14.md  plan_provider_orchestration_2026-03-12.md  plan_toml_bootstrap_2026-03-12.md
docs/: MCP_SERVER.md  arch.md  product.md  provider-matrix.md  provider-registry-2026.md
examples/: mcp_usage.py
img/: art.txt
nexi/: __init__.py  __main__.py  citations.py  cli.py  compaction.py  config.py  config_doctor.py  config_template.py  direct_fetch.py  direct_provider.py  errors.py  fetch_cli.py  history.py  main.py  mcp_server.py  mcp_server_cli.py  onboard.py  output.py  runtime_noise.py  search.py  search_cli.py  token_counter.py  tools.py
nexi/backends/: __init__.py  api_keys.py  base.py  brave.py  crawl4ai.py  custom_python.py  exa.py  firecrawl.py  http_client.py  jina.py  linkup.py  markdown_new.py  openai_compatible.py  orchestrators.py  perplexity_search.py  registry.py  searxng.py  serpapi.py  serper.py  snitchmd.py  special_fetch.py  tavily.py
skills/nexi-guided-setup/: SKILL.md
skills/nexi-search/: SKILL.md
tests/: manual_chunk_test.py  test_backends_api_keys.py  test_backends_custom_python.py  test_backends_fetch_providers.py  test_backends_http_client.py  test_backends_http_providers.py  test_backends_orchestrators.py  test_backends_registry.py  test_backends_snitchmd.py  test_backends_special_fetch.py  test_citations.py  test_cli_main.py  test_compaction.py  test_config.py  test_direct_cli.py  test_direct_fetch.py  test_history.py  test_mcp_server.py  test_mcp_structure.py  test_output.py  test_runtime_noise.py  test_token_counter.py  test_tools.py
(+5 files in other folders)
