[project]
name = "nexi-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "openai>=2.17.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "tiktoken>=0.12.0",
]
[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
mcp = [
    "fastmcp>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nexi"]
