[project]
name = "nexi-search"
version = "0.4.0"
description = "Self-hosted perplexity in your terminal - LLM-powered web search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "openai>=2.17.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "tiktoken>=0.12.0",
]
[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1.0",
]

[project.scripts]
nexi = "nexi.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]
mcp = [
    "fastmcp>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nexi"]
